# hsraytrace

./: .gitignore  LICENSE  TODO.md  hsraytrace-exe.prof  hsraytrace.cabal  stack.yaml
app/: Main.hs
src/: Image.hs  Intersection.hs  Lib.hs  Ray.hs  Shape.hs  Vector.hs  Voxel.hs
