name:                hsraytrace
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/thorinii/hsraytrace#readme
license:             BSD3
license-file:        LICENSE
author:              Lachlan Phillips
maintainer:          flipsidelachy@gmail.com
copyright:           2015 Lachlan Phillips
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Vector
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hsraytrace-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hsraytrace
  default-language:    Haskell2010

test-suite hsraytrace-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hsraytrace
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/thorinii/hsraytrace
